# Forge

./: .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  package-lock.json  package.json  tsconfig.base.json
.claude/: wf-align-audit.mjs  wf-dark-theme.mjs  wf-interaction-audit.mjs  wf-provenance-audit.mjs
.github/: dependabot.yml
.github/workflows/: ci.yml  macos-release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: ensure-dev-server.mjs  tauri-release-config.mjs  tauri-release-config.test.mjs
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  codex-bundle-bridge.js  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/.codex/skills/starter-skill/: SKILL.md
apps/desktop/src-tauri/capabilities/: codex-bundle.json  default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_server.rs  browser_runtime.rs  codex_bundle.rs  command_error.rs  document_preview.rs  git_host.rs  global_state.rs  image_generation.rs  local_files.rs  main.rs  native_shell.rs  projectless.rs  spreadsheet_preview.rs  thread_rollouts.rs  workspace_files.rs
apps/desktop/src-tauri/src/browser_runtime/: cdp.rs  scripts.rs  socket.rs  store.rs
apps/desktop/src-tauri/src/browser_runtime/cdp/: dom.rs  eval.rs  execute.rs  navigation.rs  screenshot.rs  tabs.rs
apps/desktop/src-tauri/tests/: blocking_commands_use_async.rs  commands_use_structured_errors.rs
crates/host/: Cargo.toml
crates/host/assets/instructions/: base.md  header.md  personality-friendly.md  personality-pragmatic.md
crates/host/src/: auth.rs  computer_use.rs  host.rs  installation.rs  lib.rs  profile.rs  rollout_items.rs  signature.rs  test_support.rs  thread_history.rs
docs/: DEVELOPMENT.md  PRD-presales-admin.html  PRD-presales-brief.html  PRD-presales-feasibility.html
docs/dev/: codex-alignment-ab-checklist.md  codex-alignment-collab-agent.md  codex-alignment-dispatcher.md  codex-alignment-gap-matrix.md  codex-alignment-image-generation.md  codex-alignment-plan.md  codex-alignment-reasoning.md  codex-alignment-unified-diff.md  codex-bundle-host.md  kb-decoupling-plan.md  presales-mcp-tools.md  yuxi-knowledge-flow.md
examples/: 1.txt  presales-knowledge-platform-demo.html  rag.md
examples/internal-api-demo/: DESIGN.md  README.md
examples/internal-api-demo/mcp-server/: package-lock.json  package.json  tsconfig.json
examples/internal-api-demo/mcp-server/src/: api-client.ts  server.ts
examples/internal-api-demo/skill/ai-research-camp-design/: SKILL.md
openspec/changes/bootstrap-bundled-capability-plugins/: design.md  proposal.md  tasks.md
openspec/changes/connect-browser-computer-use-runtime-readiness/: design.md  proposal.md  tasks.md
openspec/changes/connect-browser-computer-use-settings/: design.md  proposal.md  tasks.md
openspec/changes/reduce-settings-save-apply-button-size/: design.md  proposal.md  tasks.md
scripts/: check-ts-runtime-cycles.mjs  e2e-smoke.mjs  extract-codex-asar.mjs  generate-tauri-update-metadata.mjs  generate-tauri-update-metadata.test.mjs  prepare-codex-sidecar.mjs  prepare-codex-sidecar.test.mjs  release.sh  smoke-codex-sidecar.mjs  smoke-codex-sidecar.test.mjs  sync-codex-protocol.mjs
scripts/e2e-helpers/: team-service-mock.mjs
(+6 files in other folders)
