[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/host"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.1", features = [] }
tauri-build = "2.5.3"
tauri-plugin-shell = "2.3.3"
thiserror = "2"
