[package]
name = "hicodex-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
