[package]
name = "forge-host"
version.workspace = true
edition.workspace = true
license.workspace = true
# Private app crate — also lets cargo-deny's `private.ignore` skip the
# UNLICENSED license check for workspace members.
publish = false

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
