[package]
name = "hicodex-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hicodex-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
base64 = { workspace = true }
cfb = "0.7.3"
hicodex-host = { path = "../../../crates/host" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
