[package]
name = "hicodex-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hicodex-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
base64 = { workspace = true }
cfb = "0.7.3"
hicodex-host = { path = "../../../crates/host" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = { workspace = true }
tauri-plugin-single-instance = { version = "2.4.1", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
